--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -17,7 +17,7 @@
             <a class="has-border" href="./resume.html">Resume</a>
             <a class="has-border" href="./aboutPage.html">About Me</a>
             <a class="has-border">My Blog</a>
-            <a class="has-border">Contact Me</a>
+            <a class="has-border" href="./formPractice/index.html">Contact Me</a>
         </nav>
         </header>
 
