--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -23,7 +23,7 @@
 
 
         <main>
-          <img src="./myProfilePic.jpg" id="profile-pic" alt="Head shot of Me">
+          <img src="./images/myProfilePic.JPG" id="profile-pic" alt="Head shot of Me">
           <h1>Christopher Adam Ramirez</h1>
           <h2>Student of Web Development</h2>
           <button id="portfolio">Portfolio</button>
